# jeepito

./: .flake8  CHANGELOG.rst  Justfile  LICENSE  README.rst  pyproject.toml
.github/workflows/: gh-pages.yml  main.yml  publish-doc.yml  release.yml  tests-artifacts.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  forewords.rst  index.rst
docs/source/user/: api.rst  glossary.rst  introduction.rst
docs/source/user/cookbook/: 01-model-definition.rst  01_model_definition_01.py  01_model_definition_02.py  01_model_definition_03.py  02-repository.rst  02_repository_01.py  02_repository_02.py  03-unit-of-work.rst  03_unit_of_work_01.py  03_unit_of_work_02.py  04-service-handler.rst  04_service_handler_01.py  04_service_handler_02.py  04_service_handler_03.py  04_service_handler_04.py  05-message-bus.rst  05_message_bus_01.py  05_message_bus_02.py  05_message_bus_03.py  06-eventstream.rst  06_eventstream_01.py  06_eventstream_02.py  06_eventstream_03.py  06_eventstream_04.py  06_eventstream_05.py  07-local-eventstore.rst  07_local_eventstore_01.py  07_local_eventstore_02.py  07_local_eventstore_03.py  08-sqlalchemy-uow.rst  08_sqlalchemy_uow_01.py  08_sqlalchemy_uow_02.py  08_sqlalchemy_uow_03.py  08_sqlalchemy_uow_04.py  08_sqlalchemy_uow_05.py  08_sqlalchemy_uow_06.py  08_sqlalchemy_uow_07.py  08_sqlalchemy_uow_08.py  08_sqlalchemy_uow_09.py  08_sqlalchemy_uow_10.py  (+11 more)
examples/reading-club/: pyproject.toml
examples/reading-club/src/reading_club/adapters/: eventstream.py
examples/reading-club/src/reading_club/adapters/uow_sqla/: orm.py  uow.py
examples/reading-club/src/reading_club/domain/: messages.py  model.py
examples/reading-club/src/reading_club/service/: repositories.py  uow.py
examples/reading-club/src/reading_club/service/handlers/: book.py
examples/reading-club/tests/: conftest.py  test_service_handler_add_book.py
examples/reading-club/tests/eventstream_celery/: conftest.py  test_adapter.py
examples/reading-club/tests/uow_sqla/: conftest.py  test_repositories.py  test_transaction.py
scripts/: gen_unasync.py  get_version.py  write_changelog.py
src/jeepito/: __init__.py  typing.py
src/jeepito/domain/: model.py
src/jeepito/messagebus/service/_async/: registry.py
src/jeepito/messagebus/service/_sync/: eventstream.py  registry.py  repository.py  unit_of_work.py
src/jeepito/service/: eventstream.py
src/jeepito/service/_async/: eventstream.py  registry.py  repository.py  unit_of_work.py
src/jeepito/service/_sync/: eventstream.py  registry.py  repository.py  unit_of_work.py
src/messagebus/: __init__.py  typing.py
src/messagebus/domain/: model.py
src/messagebus/service/: eventstream.py  registry.py  typing.py  unit_of_work.py
src/messagebus/service/_async/: eventstream.py  registry.py  repository.py  unit_of_work.py
src/messagebus/service/_sync/: eventstream.py  registry.py  repository.py  unit_of_work.py
tests/_async/: conftest.py  test_eventstore.py  test_eventstream.py  test_registry.py  test_repository.py  test_unit_of_work.py
tests/_async/handlers/: dummy.py
tests/_sync/: conftest.py  test_eventstore.py  test_eventstream.py  test_model.py  test_registry.py  test_repository.py  test_unit_of_work.py
tests/_sync/handlers/: dummy.py
