[tool.poetry]
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
description = "A message bus library"
name = "Jeepito"
version = "0.2.2"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[[tool.mypy.overrides]]
disallow_any_generics = true
disallow_untyped_defs = true
module = "jeepito.*"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.3.0"
typing-extensions = "^4.6.3"
venusian = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
esbonio = "^0.16.1"
flake8 = "^7.1.1"
furo = "^2024.8.6"
isort = "^5"
mypy = "^1.4.0"
pytest = "^8"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
result = "^0.17.0"
sphinx = "^7.0.0"
tomlkit = "^0.11.5"
unasync = "^0.6.0"


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    # standard lib
    'ignore:.*datetime.datetime.utcnow\(\) is deprecated and scheduled for removal',
    # setuptools
    'ignore:.*pkg_resources is deprecated as an API.*:DeprecationWarning',
    'ignore:.*Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
    # venusian
    'ignore:.*find_module\(\) is deprecated.*:DeprecationWarning',
    'ignore:.*FileFinder.find_loader\(\) is deprecated.*:DeprecationWarning',
]

[tool.coverage.report]
exclude_lines = [
  "# coverage: ignore",
]


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
