[project]
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
description = "A message bus library"
name = "Jeepito"
version = "0.3.2"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = ["pydantic>=2.5.0,<3", "venusian>=3.0.0,<4"]

[project.urls]
Homepage = "https://github.com/mardiros/jeepito"
Documentation = "https://mardiros.github.io/jeepito"
Repository = "https://github.com/mardiros/jeepito.git"
Issues = "https://github.com/mardiros/jeepito/issues"
Changelog = "https://mardiros.github.io/jeepito/user/changelog.html"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.12.0,<2",
    "furo>=2024.8.6",
]

[dependency-groups]
dev = [
    "mypy>=1.4.0,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0,<7",
    "result>=0.17.0,<0.18.0",
    "unasync>=0.6.0,<0.7.0",
]
doc = [
    "esbonio>=0.16.1",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.12.0,<2",
    "furo>=2024.8.6",
]


[tool.pdm.build]
includes = ["src", "CHANGELOG.rst"]
excludes = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # bug bear security warning
    "I",   # isort import order
    "F",   # pyflakes
    "UP",  # alter when better syntax is available
    "RUF", #  the ruff devleoper's own rules
]
ignore = ["UP007"] # py39 !

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[[tool.mypy.overrides]]
disallow_any_generics = true
disallow_untyped_defs = true
module = "jeepito.*"

[[tool.mypy.overrides]]
disallow_any_generics = true
disallow_untyped_defs = true
module = "jeepito.*"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    # standard lib
    'ignore:.*datetime.datetime.utcnow\(\) is deprecated and scheduled for removal',
    # setuptools
    'ignore:.*pkg_resources is deprecated as an API.*:DeprecationWarning',
    'ignore:.*Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
    # venusian
    'ignore:.*find_module\(\) is deprecated.*:DeprecationWarning',
    'ignore:.*FileFinder.find_loader\(\) is deprecated.*:DeprecationWarning',
]

[tool.coverage.report]
exclude_lines = ["# coverage: ignore"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
